--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
         </div>
         <div class="content">
             <h1>اهلاً وسهلاً في شركة <span class="primary-text"> المطرقة الفخارية</span> </h1>
-            <p>شركة المطرقة الفخارية للتجارة العامة والمقاولات العامة والأعمال الكهربائية  العامة والاستيراد والتصدير العام مختصون في تجهيز ونصب وتصنيع  واستيراد مضخات المياه الثقيلة والمطرقات المائيةوالرافعات الجسريةوكل أنواع البايبات والفتنك ، بالإضافة إلى تركيب البايبات 
-                والفتنك والحام وفق أعلى  
-                 المعايير المحلية والدولية. نقدم خدمات متميزة في الأعمال الميكانيكية العامة والأعمال الكهربائية العامة والانشاء والبناء والاستيراد  والتصدير العام </p>
+            <p>شركة المطرقة الفخارية للتجارة العامة والمقاولات العامة والأعمال الكهربائية  العامة والاستيراد والتصدير العام مختصون في تجهيز ونصب وتصنيع  واستيراد مضخات المياه الثقيلة والمطرقات المائية 
+                والرافعات الجسرية وكل أنواع البايبات والفتنك ، بالإضافة إلى تركيب البايبات 
+                والفتنك ولِحام وفق أعلى  
+                 المعايير المحلية والدولية.
+                  نقدم خدمات متميزة في الأعمال الميكانيكية العامة والأعمال الكهربائية
+                   العامة والانشاء والبناء والاستيراد  والتصدير العام </p>
             <a href="#contact" class="btn btn-primary">تواصل معنا</a>
         </div>
     </header>
@@ -288,6 +291,9 @@
                     <img src="./img4/photo_2025-58-23_16-10-09.png" alt="gallery36">
                     <img src="./img4/photo_2025-57-23_16-09-47.png" alt="gallery36">
                     <img src="./img4/photo_2025-59-23_16-10-20.png" alt="gallery36">
+                    <img src="./img4/photo_40_2025-01-22_17-33-52.png" alt="gallery36">
+                    <img src="./img4/photo_22_2025-01-22_17-33-52.png" alt="gallery36">
+                    <img src="./img4/photo_46_2025-01-22_17-33-52.png" alt="gallery36">
                     
                 </div>
             </div>
